# juniper

./: .gitignore  DOCS.md  README.md  changelog.md  demo1_detection.ipynb  demo2_selection.ipynb  demo3_cued_selection.ipynb  demo4_Huetchen.ipynb  demo5_binding_through_space.ipynb  demo6_MemoryGame.ipynb  demo7_Corsi_sequence.ipynb  demo8_Corsi_query.ipynb  juniper.py  pyproject.toml  requirements.txt  run.py  run_config.json
.github/workflows/: ci.yaml  cicl.yaml
architectures/: example_architecture.py  example_hebbian_connection.py  example_static_steps.py  performance_test.py
demos/: demo1_detection.ipynb  demo2_selection.ipynb  demo3_cued_selection.ipynb  demo4_Huetchen.ipynb  demo5_binding_through_space.ipynb  demo6_MemoryGame.ipynb  demo7_Corsi_sequence.ipynb  demo8_Corsi_query.ipynb  example_architecture.py  example_coordinate_transform.py  example_hebbian_connection.py  example_static_steps.py  example_tcp_sockets.py  performance_test.ipynb  performance_test.py  test.ipynb  test_jax.py
demos/demo/: demo1.py  demo2.py  demo3.py  demo4.py  demoMemoryGame.py  demo_corsi.py  demo_corsi_sequence.py  demo_huetchen.py  demo_huetchen_tracking.py
docs/: mkdocs.yml
docs/docs/: changelog.md  index.md
docs/docs/api/: backend.md  errors.md  frontend.md  index.md
docs/docs/configurables/: frame_graph.md  gaussian.md  index.md  lateral_kernel.md  sigmoid.md  transform.md
docs/docs/guide/: architecture.md  circuit-subclasses.md  cli.md  installation.md
docs/docs/steps/: index.md
docs/docs/stylesheets/: extra.css
src/: AbsSigmoid.py  Architecture.py  Configurable.py  GaussKernel.py  LinearKernelCombination.py  architecture_import.py  plotting.py  sigmoids.py  util.py  util_jax.py
src/demo/: demo1.py  demo2.py  demo3.py  demo4.py  demoMemoryGame.py  demo_corsi.py  demo_corsi_sequence.py  demo_huetchen.py
src/juniper/: Architecture.py  Circuit.py  Compiler.py  Configurable.py  Convolution.py  Engine.py  FrameGraph.py  GaussKernel.py  Gaussian.py  LateralKernel.py  LinearKernelCombination.py  RuntimeInfo.py  Sigmoid.py  Transform.py  __init__.py  architecture_import.py  util.py
src/juniper/algebra/: AddConstant.py  ComponentMultiply.py  Convolution.py  Normalization.py  StaticGain.py  Sum.py  TransferFunction.py
src/juniper/arrays/: Clamp.py  CompressAxes.py  ExpandAxes.py  Flip.py  MatrixPadding.py  (+6 more)
src/misc/: gen_perf_json_files.py
src/steps/: ComponentMultiply.py  CompressAxes.py  Convolution.py  DemoInput.py  ExampleDynamicStep.py  ExampleStaticStep.py  ExpandAxes.py  GaussInput.py  HSV_input.py  HebbianConnection.py  ImageInput.py  NeuralField.py  Normalization.py  Projection.py  ReorderAxes.py  StaticGain.py  Step.py  Sum.py  TimedBoost.py  TransferFunction.py
tests/: test_compile_failure_report.py  test_juniper.py  test_output_shape_inference.py
(+220 files in other folders)
