[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper"              
version = "0.5.0"
description = "JUNIPER, the GPU Accelerated Python Implementation of CEDAR"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["jax", "jaxlib", "matplotlib", "flax", "flaxmodels"]

[project.optional-dependencies]
cpu = []
dev = ["pytest", "ruff", "mypy"]

cuda12 = [
  "jax[cuda12]"
]

cuda13 = [
  "jax[cuda13]"
]

[tool.setuptools.packages.find]
where = ["src"]

# Include non-.py files inside the package (config.json, misc/, some_folder/)
[tool.setuptools.package-data]
package = [
  "run_config.json",
  "misc/**",
  "steps/**"
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
strict = true
filterwarnings = [
    'ignore:.*use of fork\(\) may lead to deadlocks in the child\.:DeprecationWarning',
    'ignore:.*os\.fork\(\) was called\. os\.fork\(\) is incompatible with multithreaded code.*:RuntimeWarning',
]
